--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fruit Brust</title>
+    <title>Fruit Burst</title>
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css"
       rel="stylesheet"
@@ -44,7 +45,7 @@
 
            <div class="navbar-center hidden lg:flex gap-5">
               <img src="./images/logo.png" alt="">
-              <h3 class="text-xl md:text-2 lg:text-3xl text-white">Fruit Brust</h3>
+              <h3 class="text-xl md:text-2 lg:text-3xl text-white">Fruit Burst</h3>
             </div>
 
             <div class="navbar-end">
