--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Burst</title>
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css"
       rel="stylesheet"
@@ -27,20 +31,26 @@
         }
       </script>
 
+<style>
+  .font-family {
+    font-family: "Lato", sans-serif;
+  }
+</style>
+
 </head>
 <body>
   <header>
    <!-- navbar section start -->
   <nav>
     <section>
-        <div class="navbar bg-base-100 max-w-screen-xl mx-auto my-12 px-10 bg-[#F85559] rounded-full">
-            <div class="navbar-start">             
-              <div class="flex gap-5 text-left text-white">
-                <p>Home</p>
-                <p>About Us</p>
-                <p>Shop</p>
-                <p>All Fruits</p>
-              </div>  
+        <div class="navbar bg-base-100 max-w-screen-xl mx-auto my-12 px-10 bg-[rgb(85,248,99)] rounded-full">
+            <div class="navbar-start">               
+              <ul class="menu menu-horizontal flex gap-5 text-left text-white">
+                <li><a>Home</a></li>
+                <li><a>About Us</a></li>
+                <li><a>Shop</a></li>
+                <li><a>All Fruits</a></li>
+              </ul>
             </div>
 
            <div class="navbar-center hidden lg:flex gap-5">
@@ -124,20 +134,22 @@
 
 
 </main>
-<!-- footer section start -->
-<footer class="footer footer-center p-10 bg-[#121212] text-base-content rounded">
-  <div class="flex text-[#FFF] font-lota text-5xl">
+
+<footer>
+  <!-- footer section start -->
+  <section class="footer footer-center p-10 bg-[#121212] text-base-content rounded">
+   <div class="flex text-[#FFF] font-lota text-5xl">
       <img src="images/logo.png" alt="">
       <h1>Fruit Burst</h1>
-  </div>
-  <div class="grid grid-flow-col gap-4 text-[#FFF] text-sm">
+   </div>
+   <div class="grid grid-flow-col gap-4 text-[#FFF] text-sm">
     <a class="link link-hover">About Us</a> 
     <a class="link link-hover">Shop</a> 
     <a class="link link-hover">All Fruits</a> 
     <a class="link link-hover">Support</a>
     <a class="link link-hover">My Account</a>
-  </div> 
-  <div>
+   </div> 
+   <div>
     <div class="grid grid-flow-col gap-4 text-[#FFF]">
       <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
         <g clip-path="url(#clip0_12_5266)">
@@ -197,9 +209,10 @@
                   </clipPath>
                   </defs>
                   </svg>
-    </div>
-  </div> 
+     </div>
+   </div> 
+ </section>
+ <!-- footer section end -->
 </footer>
-<!-- footer section end -->
 </body>
 </html>
