Why Choose Us section Added

--- a/index.html
+++ b/index.html
@@ -402,6 +402,50 @@
 </section>
 <!--Meet the team section end-->
 
+<!--Why Choose Us section start-->
+<section class="my-25 sm:min-auto m-8">
+  <div>
+      <div>
+          <h2 class="text-5xl font-semibold text-center pb-3">Why Choose Us</h2>
+          <p class="text-center pb-6">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature <br> from 45 BC, making it over 2000 years old.</p>
+      </div>
+  </div>
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+      <div class="">
+          <div class="sm:mx-auto">
+              <h4 class="border-b-2 text-base font-extrabold text-[#121212]"><i class="fa-solid fa-people-group p-4 "></i>Dedicated Team</h4>
+              <p class="pl-12">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+          </div>
+          <div>
+              <h4 class="border-b-2 text-base font-extrabold text-[#121212]"><i class="fa-solid fa-heart p-4"></i>Fresh is Best</h4>
+              <p class="pl-12">Professional employees are there for you to pick <br>the most amazing and fresh fruits.</p>
+          </div>
+          <div>
+              <h4 class="border-b-2 text-base font-extrabold text-[#121212]"><i class="fa-solid fa-gift p-4"></i>Gift Certificates</h4>
+              <p class="pl-12">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+          </div>
+      </div>
+      <div>
+          <img src="./images/whychoose1.png" alt="">
+      </div>
+      <div>
+          <div>
+              <h4 class="border-b-2 text-right font-extrabold text-[#121212]">Integrated Supplier<i class="fa-solid fa-people-group p-4 "></i></h4>
+              <p class="pl-12">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+          </div>
+          <div>
+              <h4 class="border-b-2 text-right font-extrabold text-[#121212]">Sustainable Practice<i class="fa-solid fa-ice-cream p-4"></i></h4>
+              <p class="pl-12">Professional employees are there for you to pick <br>the most amazing and fresh fruits.</p>
+          </div>
+          <div>
+              <h4 class="border-b-2 text-right font-extrabold text-[#121212]">The Benefits Only<i class="fa-regular fa-thumbs-up p-4"></i></h4>
+              <p class="pl-12">Professional employees are there for you to pick <br>the most amazing and fresh fruits.</p>
+          </div>
+      </div>
+  </div>
+</section>
+<!--Why Choose Us section end-->
+
 </main>
 
 <footer>
