Bonus Section Added

--- a/index.html
+++ b/index.html
@@ -126,7 +126,30 @@
             </div>
           </div>
         </div>
-  </div>   
+  </div> 
+   <!--Bonus section-->
+  <div class="flex text-center md:-mt-36 m-auto drop-shadow-xl bg-white w-10/12">
+    <div class=" py-14 px-12">
+        <img src="./images/fruit1.png" alt="">
+        <h3>Grapes</h3>
+    </div>
+    <div class=" py-14 px-12">
+        <img src="./images/fruit2.png" alt="">
+        <h3>Orange</h3>
+    </div>
+    <div class=" py-14 px-12">
+        <img src="./images/fruit3.png" alt="">
+        <h3>Mango</h3>
+    </div>
+    <div class=" py-14 px-12">
+        <img src="./images/fruit4.png" alt="">
+        <h3>Strawberry</h3>
+    </div>
+    <div class=" py-14 px-12">
+        <img src="./images/fruit5.png" alt="">
+        <h3>Pomegrante</h3>
+    </div>
+  </div>
 </section>
 <!-- banner section end -->
 </header>
@@ -195,10 +218,10 @@
                     <a href="#my_modal_8" class="btn">Details</a>
                     <div class="modal" id="my_modal_8">
                     <div class="modal-box">
-                        <img src="./images/fruit7.png" alt="">
+                        <img src="./images/fruit6.png" alt="">
                         <p class="py-4">12.90$ - 18.85$</p>
                         <p>Apples</p>
-                        <div class="modal-action justify-center">
+                        <div class="modal-action  justify-center">
                           <a href="#" class="btn bg-[#F85559]  text-white">Close</a>
                           <a href="#" class="btn bg-[#F85559]  text-white">Buy Now</a>
                         </div>
@@ -212,7 +235,7 @@
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title">12.90$ - 18.85$</h2>
-              <p>Apples</p>
+              <p>Orange</p>
               <div class="rating rating-lg rating-half">
                 <input type="radio" name="rating-10" class="rating-hidden" />
                 <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
@@ -232,7 +255,7 @@
                     <div class="modal-box">
                         <img src="./images/fruit7.png" alt="">
                         <p class="py-4">12.90$ - 18.85$</p>
-                        <p>Apples</p>
+                        <p>Orange</p>
                         <div class="modal-action justify-center">
                         <a href="#" class="btn bg-[#F85559]  text-white">Close</a>
                         <a href="#" class="btn bg-[#F85559]  text-white">Buy Now</a>
@@ -247,7 +270,7 @@
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title">12.90$ - 18.85$</h2>
-              <p>Apples</p>
+              <p>Red Dragon</p>
               <div class="rating rating-lg rating-half">
                 <input type="radio" name="rating-10" class="rating-hidden" />
                 <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
@@ -265,9 +288,9 @@
                     <a href="#my_modal_8" class="btn">Details</a>
                     <div class="modal" id="my_modal_8">
                     <div class="modal-box">
-                        <img src="./images/fruit7.png" alt="">
+                        <img src="./images/fruit8.png" alt="">
                         <p class="py-4">12.90$ - 18.85$</p>
-                        <p>Apples</p>
+                        <p>Red Dragon</p>
                         <div class="modal-action justify-center">
                         <a href="#" class="btn bg-[#F85559]  text-white">Close</a>
                         <a href="#" class="btn bg-[#F85559]  text-white">Buy Now</a>
@@ -282,7 +305,7 @@
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title">12.90$ - 18.85$</h2>
-              <p>Apples</p>
+              <p>Banana</p>
               <div class="rating rating-lg rating-half">
                 <input type="radio" name="rating-10" class="rating-hidden" />
                 <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
@@ -300,9 +323,9 @@
                     <a href="#my_modal_8" class="btn">Details</a>
                     <div class="modal" id="my_modal_8">
                     <div class="modal-box">
-                        <img src="./images/fruit7.png" alt="">
+                        <img src="./images/fruit9.png" alt="">
                         <p class="py-4">12.90$ - 18.85$</p>
-                        <p>Apples</p>
+                        <p>Banana</p>
                         <div class="modal-action justify-center">
                         <a href="#" class="btn bg-[#F85559]  text-white">Close</a>
                         <a href="#" class="btn bg-[#F85559]  text-white">Buy Now</a>
