--- a/index.html
+++ b/index.html
@@ -454,15 +454,15 @@
       <div>
           <div>
               <h4 class="border-b-2 text-right font-extrabold text-[#121212]">Integrated Supplier<i class="fa-solid fa-people-group p-4 "></i></h4>
-              <p class="pl-12">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+              <p class="pr-12 text-right">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
           </div>
           <div>
               <h4 class="border-b-2 text-right font-extrabold text-[#121212]">Sustainable Practice<i class="fa-solid fa-ice-cream p-4"></i></h4>
-              <p class="pl-12">Professional employees are there for you to pick <br>the most amazing and fresh fruits.</p>
+              <p class="pr-12 text-right">Professional employees are there for you to pick <br>the most amazing and fresh fruits.</p>
           </div>
           <div>
               <h4 class="border-b-2 text-right font-extrabold text-[#121212]">The Benefits Only<i class="fa-regular fa-thumbs-up p-4"></i></h4>
-              <p class="pl-12">Professional employees are there for you to pick <br>the most amazing and fresh fruits.</p>
+              <p class="pr-12 text-right">Professional employees are there for you to pick <br>the most amazing and fresh fruits.</p>
           </div>
       </div>
   </div>
@@ -474,11 +474,12 @@
 <footer>
   <!-- footer section start -->
   <section class="footer footer-center p-10 bg-[#121212] text-base-content rounded">
-   <div class="flex text-[#FFF] font-lota text-5xl">
+   <div class="flex text-[#FFF] font-lato text-5xl">
       <img src="images/logo.png" alt="">
       <h1>Fruit Burst</h1>
    </div>
-   <div class="grid grid-flow-col gap-4 text-[#FFF] text-sm">
+   <div class="grid grid-flow-col gap-12 text-[#FFF] text-sm">
+    <a class="link link-hover">Home</a>
     <a class="link link-hover">About Us</a> 
     <a class="link link-hover">Shop</a> 
     <a class="link link-hover">All Fruits</a> 
@@ -486,7 +487,7 @@
     <a class="link link-hover">My Account</a>
    </div> 
    <div>
-    <div class="grid grid-flow-col gap-4 text-[#FFF]">
+    <div class="grid grid-flow-col gap-4 cursor-pointer text-[#FFF]">
       <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
         <g clip-path="url(#clip0_12_5266)">
         <path d="M40 7.5975C38.5125 8.25 36.9275 8.6825 35.275 8.8925C36.975 7.8775 38.2725 6.2825 38.8825 4.36C37.2975 5.305 35.5475 5.9725 33.6825 6.345C32.1775 4.7425 30.0325 3.75 27.6925 3.75C23.1525 3.75 19.4975 7.435 19.4975 11.9525C19.4975 12.6025 19.5525 13.2275 19.6875 13.8225C12.87 13.49 6.8375 10.2225 2.785 5.245C2.0775 6.4725 1.6625 7.8775 1.6625 9.39C1.6625 12.23 3.125 14.7475 5.305 16.205C3.9875 16.18 2.695 15.7975 1.6 15.195C1.6 15.22 1.6 15.2525 1.6 15.285C1.6 19.27 4.4425 22.58 8.17 23.3425C7.5025 23.525 6.775 23.6125 6.02 23.6125C5.495 23.6125 4.965 23.5825 4.4675 23.4725C5.53 26.72 8.545 29.1075 12.13 29.185C9.34 31.3675 5.7975 32.6825 1.9625 32.6825C1.29 32.6825 0.645 32.6525 0 32.57C3.6325 34.9125 7.9375 36.25 12.58 36.25C27.67 36.25 35.92 23.75 35.92 12.915C35.92 12.5525 35.9075 12.2025 35.89 11.855C37.5175 10.7 38.885 9.2575 40 7.5975Z" fill="white"/>
