--- a/index.html
+++ b/index.html
@@ -168,25 +168,34 @@
                   <span class="countdown font-mono text-5xl">
                     <span style="--value:29;"></span>
                   </span>
-                  days
-                </div> 
+                  Days
+                </div>
+
+                <i class="fa-solid fa-ellipsis-vertical pt-4"></i>
+
                 <div class="flex flex-col">
                   <span class="countdown font-mono text-5xl">
                     <span style="--value:15;"></span>
                   </span>
-                  hours
+                  Hours
                 </div> 
+
+                <i class="fa-solid fa-ellipsis-vertical pt-4"></i>
+
                 <div class="flex flex-col">
                   <span class="countdown font-mono text-5xl">
                     <span style="--value:10;"></span>
                   </span>
-                  min
+                  Minutes
                 </div> 
+
+                <i class="fa-solid fa-ellipsis-vertical pt-4"></i>
+
                 <div class="flex flex-col">
                   <span class="countdown font-mono text-5xl">
                     <span style="--value:15;"></span>
                   </span>
-                  sec
+                  Seconds
                 </div>
               </div>
               </div>
@@ -436,8 +445,8 @@
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
       <div class="">
           <div class="sm:mx-auto">
-              <h4 class="border-b-2 text-base font-extrabold text-[#121212]"><i class="fa-solid fa-people-group p-4 "></i>Dedicated Team</h4>
-              <p class="pl-12">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                <h4 class="border-b-2 text-base font-extrabold text-[#121212]"><i class="fa-solid fa-people-group p-4 "></i>Dedicated Team</h4>           
+                <p class="pl-12">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
           </div>
           <div>
               <h4 class="border-b-2 text-base font-extrabold text-[#121212]"><i class="fa-solid fa-heart p-4"></i>Fresh is Best</h4>
@@ -450,10 +459,11 @@
       </div>
       <div>
           <img src="./images/whychoose1.png" alt="">
+            
       </div>
       <div>
           <div>
-              <h4 class="border-b-2 text-right font-extrabold text-[#121212]">Integrated Supplier<i class="fa-solid fa-people-group p-4 "></i></h4>
+              <h4 class="border-b-2 text-right font-extrabold text-[#121212]">Integrated Supplier<i class="fa-solid fa-industry p-4"></i></h4>
               <p class="pr-12 text-right">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
           </div>
           <div>
@@ -467,6 +477,7 @@
       </div>
   </div>
 </section>
+
 <!--Why Choose Us section end-->
 
 </main>
